--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     <div class="header__row">
-                        <div class="header__leftside">
+                        <div class="header__leftside header__leftside_border-r">
                             <nav class="menu-products header__menu-products">
                                 <a href="#" class="menu-products__link">Комбо наборы</a>
                                 <a href="#" class="menu-products__link">Пицца</a>
@@ -105,7 +105,136 @@
             </div>
         </header>
         <main class="main">
-
+            <section class="banner">
+                <div class="container">
+                    <div class="banner-slider">
+                        <div class="swiper banner-slider__swiper" data-swiper="banner">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide banner-slider__swiper-slide">
+                                    <img src="/src/img/banner1.jpg" alt="tunets">
+                                </div>
+                                <div class="swiper-slide banner-slider__swiper-slide">
+                                    <img src="/src/img/banner2.jpg" alt="tunets">
+                                </div>
+                                <div class="swiper-slide banner-slider__swiper-slide">
+                                    <img src="/src/img/banner3.jpg" alt="tunets">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-pagination" data-swiperPagination="bannerPagination"></div>
+                        <div class="swiper-button-prev" data-swiperNav="bannerPrev">
+                            <svg class="shevron-icon">
+                                <use xlink:href="img/icons/sprite.svg#shevron"></use>
+                            </svg>
+                        </div>
+                        <div class="swiper-button-next" data-swiperNav="bannerNext">
+                            <svg class="shevron-icon">
+                                <use xlink:href="img/icons/sprite.svg#shevron"></use>
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="promo" id="combo">
+                <div class="container">
+                    <div class="promo__row">
+                        <article class="promo-card">
+                            <a href="#" class="promo-card__link"></a>
+                            <div class="promo-card__bg">
+                                <div class="promo-card__content">
+                                    <img src="/src/img/promo1.png" alt="promo">
+                                </div>
+                            </div>
+                        </article>
+                        <article class="promo-card">
+                            <a href="#" class="promo-card__link"></a>
+                            <div class="promo-card__bg">
+                                <div class="promo-card__content">
+                                    <img src="/src/img/promo2.png" alt="promo">
+                                </div>
+                            </div>
+                        </article>
+                        <article class="promo-card">
+                            <a href="#" class="promo-card__link"></a>
+                            <div class="promo-card__bg">
+                                <div class="promo-card__content">
+                                    <img src="/src/img/promo3.png" alt="promo">
+                                </div>
+                            </div>
+                        </article>
+                        <article class="promo-card">
+                            <a href="#" class="promo-card__link"></a>
+                            <div class="promo-card__bg">
+                                <div class="promo-card__content">
+                                    <img src="/src/img/promo4.png" alt="promo">
+                                </div>
+                            </div>
+                        </article>
+                        <article class="promo-card">
+                            <a href="#" class="promo-card__link"></a>
+                            <div class="promo-card__bg">
+                                <div class="promo-card__content">
+                                    <img src="/src/img/promo5.png" alt="promo">
+                                </div>
+                            </div>
+                        </article>
+                        <article class="promo-card">
+                            <a href="#" class="promo-card__link"></a>
+                            <div class="promo-card__bg">
+                                <div class="promo-card__content">
+                                    <img src="/src/img/promo6.png" alt="promo">
+                                </div>
+                            </div>
+                        </article>
+                        <article class="promo-card">
+                            <a href="#" class="promo-card__link"></a>
+                            <div class="promo-card__bg">
+                                <div class="promo-card__content">
+                                    <img src="/src/img/promo7.png" alt="promo">
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <section class="products" id="rolls">
+                <div class="container">
+                    <h2 class="title title_h2 products__title_h2">
+                        <a href="#">Роллы</a>
+                    </h2>
+                    <div class="product-filter">
+                        <button class="product-filter__button product-filter__button_current">Все</button>
+                        <button class="product-filter__button">Филадельфия</button>
+                        <button class="product-filter__button">Холодные</button>
+                        <button class="product-filter__button">Запечённые</button>
+                        <button class="product-filter__button">Горячие</button>
+                        <button class="product-filter__button">Острые</button>
+                    </div>
+                    <div class="products-grid">
+                        <article class="product-card">
+                            <div class="product-card__top">
+                                <a href="#">
+                                    <img src="/src/img/roll1.png" alt="roll">
+                                </a>
+                            </div>
+                            <div class="product-card__desc">
+                                <h3 class="title title_h3 product-card__title">
+                                    <a href="#">Банзай</a>
+                                </h3>
+                                <p class="product-card__text">Нори, японский рис, творожный сыр Cremette, креветка темпура</p>
+                            </div>
+                            <div class="product-card__bottom">
+                                <div class="product-card__right">
+                                    <span class="product-card__price">379&nbsp;₽</span>
+                                    <span>/</span> 
+                                    <span class="product-card__quant">240&nbsp;г</span>
+                                </div>
+                                <button class="button product-card__button">Выбрать</button>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container"></div>
