верстка поиска, попапа корзины, фикс шапки

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
                                             <use xlink:href="img/icons/sprite.svg#cross"></use>
                                         </svg>
                                     </button>
-                                    <button class="search-block__btn btn">Найти</button>
+                                    <button class="search-block__button button">Найти</button>
                                 </div>
                                 <button class="search-block__btn">
                                     <svg class="search-icon">
@@ -101,6 +101,126 @@
                                 </div>
                                 <span class="personal-block__text personal-block__text_default">Корзина</span>
                                 <div class="personal-block__text">1 089₽</div>
+                                <a href="#" class="personal-block__link"></a>
+                                <div class="cart-popup">
+                                    <div class="cart-popup__content">
+                                        <div class="cart-popup__top">
+                                            <ul class="cart-popup__list">
+                                                <li class="cart-item">
+                                                    <div class="cart-item__left">
+                                                        <div class="cart-item__pic">
+                                                            <img src="/src/img/roll1.png" alt="roll">
+                                                        </div>
+                                                        <div class="cart-item__number">x 1</div>
+                                                        <div class="cart-item__name">Банзай</div>
+                                                    </div>
+                                                    <div class="cart-item__right">
+                                                        <div class="cart-item__price">379&nbsp;₽</div>
+                                                        <button class="cart-item__reset">
+                                                            <svg class="reset-icon">
+                                                                <use xlink:href="img/icons/sprite.svg#cross"></use>
+                                                            </svg>
+                                                        </button>
+                                                    </div>
+                                                </li>
+                                                <li class="cart-item">
+                                                    <div class="cart-item__left">
+                                                        <div class="cart-item__pic">
+                                                            <img src="/src/img/roll1.png" alt="roll">
+                                                        </div>
+                                                        <div class="cart-item__number">x 1</div>
+                                                        <div class="cart-item__name">Банзай</div>
+                                                    </div>
+                                                    <div class="cart-item__right">
+                                                        <div class="cart-item__price">379&nbsp;₽</div>
+                                                        <button class="cart-item__reset">
+                                                            <svg class="reset-icon">
+                                                                <use xlink:href="img/icons/sprite.svg#cross"></use>
+                                                            </svg>
+                                                        </button>
+                                                    </div>
+                                                </li>
+                                                <li class="cart-item">
+                                                    <div class="cart-item__left">
+                                                        <div class="cart-item__pic">
+                                                            <img src="/src/img/roll1.png" alt="roll">
+                                                        </div>
+                                                        <div class="cart-item__number">x 1</div>
+                                                        <div class="cart-item__name">Банзай</div>
+                                                    </div>
+                                                    <div class="cart-item__right">
+                                                        <div class="cart-item__price">379&nbsp;₽</div>
+                                                        <button class="cart-item__reset">
+                                                            <svg class="reset-icon">
+                                                                <use xlink:href="img/icons/sprite.svg#cross"></use>
+                                                            </svg>
+                                                        </button>
+                                                    </div>
+                                                </li>
+                                                <li class="cart-item">
+                                                    <div class="cart-item__left">
+                                                        <div class="cart-item__pic">
+                                                            <img src="/src/img/roll1.png" alt="roll">
+                                                        </div>
+                                                        <div class="cart-item__number">x 1</div>
+                                                        <div class="cart-item__name">Банзай</div>
+                                                    </div>
+                                                    <div class="cart-item__right">
+                                                        <div class="cart-item__price">379&nbsp;₽</div>
+                                                        <button class="cart-item__reset">
+                                                            <svg class="reset-icon">
+                                                                <use xlink:href="img/icons/sprite.svg#cross"></use>
+                                                            </svg>
+                                                        </button>
+                                                    </div>
+                                                </li>
+                                                <li class="cart-item">
+                                                    <div class="cart-item__left">
+                                                        <div class="cart-item__pic">
+                                                            <img src="/src/img/roll1.png" alt="roll">
+                                                        </div>
+                                                        <div class="cart-item__number">x 1</div>
+                                                        <div class="cart-item__name">Банзай</div>
+                                                    </div>
+                                                    <div class="cart-item__right">
+                                                        <div class="cart-item__price">379&nbsp;₽</div>
+                                                        <button class="cart-item__reset">
+                                                            <svg class="reset-icon">
+                                                                <use xlink:href="img/icons/sprite.svg#cross"></use>
+                                                            </svg>
+                                                        </button>
+                                                    </div>
+                                                </li>
+                                                <li class="cart-item">
+                                                    <div class="cart-item__left">
+                                                        <div class="cart-item__pic">
+                                                            <img src="/src/img/roll1.png" alt="roll">
+                                                        </div>
+                                                        <div class="cart-item__number">x 1</div>
+                                                        <div class="cart-item__name">Банзай</div>
+                                                    </div>
+                                                    <div class="cart-item__right">
+                                                        <div class="cart-item__price">379&nbsp;₽</div>
+                                                        <button class="cart-item__reset">
+                                                            <svg class="reset-icon">
+                                                                <use xlink:href="img/icons/sprite.svg#cross"></use>
+                                                            </svg>
+                                                        </button>
+                                                    </div>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="cart-popup__bottom">
+                                            <div class="cart-popup__bottom-inner">
+                                                <div class="cart-popup__left">4 позиции</div>
+                                                <div class="cart-popup__right">
+                                                    <div class="cart-popup__sum">1,379&nbsp;₽</div>
+                                                    <button class="button button_border cart-popup__button">В корзину</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="personal-block profile-block">
                                 <div class="personal-block__visual">
@@ -113,6 +233,7 @@
                                     174
                                     <img src="./img/icons/light.svg" alt="points">
                                 </div>
+                                <a href="#" class="personal-block__link"></a>
                             </div>
                         </div>
                     </div>
