выбор конкретного элемента в дропдауне выбора города

--- a/src/index.html
+++ b/src/index.html
@@ -27,15 +27,15 @@
                     <svg class="location-icon">
                       <use xlink:href="img/icons/sprite.svg#location"></use>
                     </svg>
-                    <div class="city-select__field">
-                      <input type="hidden" value="Краснодар" name="city">
+                    <button type="button" class="city-select__field">
+                      <input type="hidden" value="0" name="city">
                       <span class="city-select__text">Краснодар</span>
-                    </div>
-                    <button class="city-select__btn" type="button">
+                    </button>
+                    <div class="city-select__arrow">
                       <svg class="shevron-icon">
                         <use xlink:href="img/icons/sprite.svg#shevron"></use>
                       </svg>
-                    </button>
+                    </div>
                   </div>
                   <div class="city-select__drop"></div>
                 </div>
