--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <div class="transformer-menu">
               <div class="header__leftside">
                 <a href="/" class="logo header__logo">
-                  <img src="./img/logo.svg" alt="Джонни Тунец">
+                  <img src="./img/logo.svg" alt="Джонни Тунец" width="442" height="36">
                 </a>
                 <div class="city-select" id="citySelect">
                   <div class="city-select__visible">
@@ -101,7 +101,7 @@
             </div>
             <div class="header__rightside">
               <div class="hide-menu">
-                <button class="menu-trigger hide-menu__menu-trigger" aria-label="Кнопка управления мобильным меню">
+                <button class="menu-trigger hide-menu__menu-trigger" type="button" aria-label="Кнопка управления мобильным меню">
                   <svg class="burger-icon">
                     <use xlink:href="img/icons/sprite.svg#burger"></use>
                   </svg>
