--- a/src/index.html
+++ b/src/index.html
@@ -129,9 +129,8 @@
                       </svg>
                       <div class="cart-block__summ">3</div>
                     </div>
-                    <span class="personal-block__text personal-block__text_default">Корзина</span>
                     <div class="personal-block__text">1 089₽</div>
-                    <a href="#" class="personal-block__link"></a>
+                    <a href="#" class="personal-block__link" aria-label="Корзина"></a>
                     <div class="cart-popup">
                       <div class="cart-popup__content">
                         <div class="cart-popup__top">
@@ -261,9 +260,9 @@
                     <span class="personal-block__text personal-block__text_default">Войти</span>
                     <div class="personal-block__text">
                       174
-                      <img src="./img/icons/light.svg" alt="points">
+                      <img src="./img/icons/light.svg" alt="points" width="17" height="18">
                     </div>
-                    <a href="#" class="personal-block__link"></a>
+                    <a href="#" class="personal-block__link" aria-label="Профиль"></a>
                   </div>
                 </div>
               </div>
@@ -280,13 +279,13 @@
             <div class="swiper banner-slider__swiper" data-swiper="banner">
               <div class="swiper-wrapper">
                 <div class="swiper-slide banner-slider__swiper-slide">
-                  <img src="/src/img/banner1.webp" alt="tunets">
+                  <img src="/src/img/banner1.webp" alt="tunets" width="1480" height="400">
                 </div>
                 <div class="swiper-slide banner-slider__swiper-slide">
-                  <img src="/src/img/banner2.webp" alt="tunets">
+                  <img src="/src/img/banner2.webp" alt="tunets" width="1480" height="400">
                 </div>
                 <div class="swiper-slide banner-slider__swiper-slide">
-                  <img src="/src/img/banner3.webp" alt="tunets">
+                  <img src="/src/img/banner3.webp" alt="tunets" width="1480" height="400">
                 </div>
               </div>
             </div>
