корзина на адаптиве

--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
             </div>
           </div>
           <div class="header__row">
-            <div class="logo-small header__logo-small"><img src="/src/img/logo-little.svg" loading="lazy" alt="Джонни Тунец"></div>
+            <div class="logo-small header__logo-small"><img src="/src/img/logo-little.svg" loading="lazy" alt="Джонни Тунец" width="64" height="54"></div>
             <div class="header__leftside header__leftside_border-r">
               <nav class="menu-products header__menu-products">
                 <a href="#" class="menu-products__link">Комбо наборы</a>
@@ -978,6 +978,12 @@
       <use xlink:href="img/icons/sprite.svg#arrow-up"></use>
     </svg>
   </button>
+  <a href="#" class="float-cart" aria-label="В корзину">
+    <div class="float-cart__summ">3</div>
+    <svg class="cart-icon">
+      <use xlink:href="img/icons/sprite.svg#cart"></use>
+    </svg>
+  </a>
 </body>
 
 </html>
